--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ Design Automation is accepted for presentation at <A
 <UL>
 	 <p class="big">
    <strong>Zhufei Chu</strong> <A
-     HREF="https://tutors.eol.cn/web/index/tabledetails?service_id=36&tutor_id=7366&rel=3&type=1">NBU
-   link</a>, born on Oct. 24th, 1986,  received his B.S. degree in electronic engineering from Shandong University, Weihai, China, in 2008, and his M.S. and Ph.D. degrees in communication and information systems from Ningbo University, Ningbo, in 2011 and 2014, respectively.
+     HREF="https://tutors.eol.cn/web/index/tabledetails?service_id=36&tutor_id=7366&rel=3&type=1">[NBU
+   link]</a>, born on Oct. 24th, 1986,  received his B.S. degree in electronic engineering from Shandong University, Weihai, China, in 2008, and his M.S. and Ph.D. degrees in communication and information systems from Ningbo University, Ningbo, in 2011 and 2014, respectively.
     He was a postdoctoral fellow at the Ecole Polytechnique Federale de Lausanne (EPFL), Lausanne, from 2016 to 2017, in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli</a>.
     He is currently a full professor at Ningbo University, Ningbo. His current research interests include many aspects of logic synthesis and its applications.
 </UL>	
