--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <li>The <A HREF="https://www.eda2.com/conferenceHome/program/detail?key=tutorial2">“Logic Synthesis Tools and Techniques: Insights from Academia and
     Industry”</a> Tutorial organized by Ningbo University and Giga
 Design Automation is accepted for presentation at <A
-  HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a> on May 8th, 2023.</li>
+  HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a> on May 8th, 2023.
+<a href="ISEDA2023.pdf" download >[handouts]</a>, 
+<a href="also.mp4" download >[demo video]</a>. 
+ </li>
 
 <li>An online turotial <A
     HREF="https://www.bilibili.com/video/BV1Ha411J7ow/?p=3">"Logic Synthesis,
@@ -136,13 +139,26 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h3> 2023 </h3>
    <p class="big">
+<li> Hongyang Pan, Ruibing Zhang, Yinshui Xia, Lunyao Wang, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Semi-Tensor Product based Circuit Simulation for SAT sweeping
+   ", <strong>IWLS' 23</strong>, <i> International Workshop on Logic & Synthesis</i>, June
+   2023, Lausanne, Switzerland.</li>
+   
+   <li> Sen Liu, Hongyang Pan, Yinshui Xia, Lunyao Wang, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Multiplicative Complexity Optimization Based on Boolean-Difference Resubstitution", <strong>IWLS' 23</strong>, <i> International Workshop on Logic & Synthesis</i>, June
+   2023, Lausanne, Switzerland.</li> 
+   
+   <li> <A HREF="https://zfchu.github.io/">储著飞</a>、洪庆辉、李冰、刘成、尹勋钊、岳金山、张吉良、卓成、李华伟，"<A
+       HREF="https://dl.ccf.org.cn/article/detail.html?_ack=1&id=6476820625082368">存内计算研究进展与发展趋势</a>"，<i>2021-2022中国计算机科学技术发展报告(纸质版)</i>, 2023年5月, pp. 195-252. </li>
+	   
+	   <li> 张健、蔡少伟、陈振邦、贺飞、李占山、马菲菲、吴志林、钟卓炜、<A HREF="https://zfchu.github.io/">储著飞</a>，"<A
+	       HREF="https://dl.ccf.org.cn/article/detail.html?_ack=1&id=6476813273516032">约束求解技术与应用</a>"，<i>2021-2022中国计算机科学技术发展报告(电子版)</i>, 2023年5月, pp. 1-47. </li>
+   
    <li> Chunliu Liao, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Improved Depth-Aware Circuit Partitioning for Mixed Logic Synthesis
 ", <strong>ISEDA' 23</strong>, <i> IEEE International Symposium of EDA</i>, May
 2023, Nanjing, China.</li>
 	<li> Chengyu Ma, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "An Integrated Logic Function Decomposition Flow for XOR-Majority Graphs", <strong>ISEDA' 23</strong>, <i> IEEE International Symposium of EDA</i>, May 2023, Nanjing, China.</li>
 	<li>
     <A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，"<A
-       HREF="<https://jeit.ac.cn/cn/article/doi/10.11999/JEIT220391">基于布尔可满足性的精确逻辑综合综述</a>"，<i>电子与信息学报</i>，2023,
+       HREF="https://jeit.ac.cn/cn/article/doi/10.11999/JEIT220391">基于布尔可满足性的精确逻辑综合综述</a>"，<i>电子与信息学报</i>，2023,
     45(1):14-23. (<strong>Invited</strong>)
 </li>
    <li> Ruibing Zhang, Hongyang Pan, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Logic Circuit Simulation based on Semi-Tensor Product", <strong>CSTIC' 23</strong>, <i> China Semiconductor Technology International Conference</i>, June
@@ -170,10 +186,10 @@ Zhang, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
        and Test in Europe Conference</i>, Antwerp, Belgium, Accepted for publication, 2022. 
    </li>
    <li>
-     朱柏成，<A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，王伦耀，夏银水，基于XMG的乘法器电路等价性验证算法，计算机辅助设计与图形学学报，2022，录用待发表.
+     朱柏成，<A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，王伦耀，夏银水，基于XMG的乘法器电路等价性验证算法，<i>计算机辅助设计与图形学学报</i>，2022，录用待发表.
      </li>
    <li>
-     赵子豪，<A HREF="https://zfchu.github.io/">储著飞</a>, 王伦耀，夏银水，多级混合极性Reed-Muller逻辑电路功耗优化，计算机辅助设计与图形学学报，2022，录用待发表.
+     赵子豪，<A HREF="https://zfchu.github.io/">储著飞</a>, 王伦耀，夏银水，多级混合极性Reed-Muller逻辑电路功耗优化，<i>计算机辅助设计与图形学学报</i>，2022，录用待发表.
      </li>
 	   <li>
 Qing Wan, Changjin Wan, Huaqiang Wu, Yuchao Yang, Xiaohe Huang, Peng Zhou, Lin Chen, Tian-Yu Wang, Yi Li, Kanhao Xue, Yuhui He, Xiangshui Miao, Xi Li, Chenchen Xie, Houpeng Chen, Zhitang Song, Hong Wang, Yue Hao, Junyao Zhang, Jia Huang, Zheng Yu Ren, Li Qiang Zhu, Jianyu Du, Chen Ge, Yang Liu, Guanglong Ding, Ye Zhou, Su-Ting Han, Guosheng Wang, Xiao Yu, Bing Chen, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lunyao Wang, Yinshui Xia, Chen Mu, Feng Lin, Chixiao Chen, Bojun Cheng, Yannan Xing, Weitao Zeng, Hong Chen, Lei Yu, Giacomo Indiveri and Ning Qiao, "<A HREF="http://iopscience.iop.org/article/10.1088/2634-4386/ac7a5a">2022 roadmap on neuromorphic devices & applications research in China </a>" (Section 12: Automated synthesis and mapping), <i>Neuromorphic Computing and Engineering</i>, 2022, 2(4): 042501. (<strong>Invited</strong>)
