--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ Design Automation is accepted for presentation at <A
 
 <UL>
 	 <p class="big">
+   <li> May 2023, Invited to served as Publication Chair of CCFDAC'23.</li>
    <li> Mar. 2023, Invited to served as Editorial Board Member of <A
        HREF="https://jeit.ac.cn/news/About%20Journal.htm">JEIT</a>.</li>
    <li> Mar. 2023, Invited to served as TPC Chair of <A
