--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Design Automation is accepted for presentation at <A
 
 <UL>
 	 <p class="big">
-   <li> May 2023, Invited to served as Publication Chair of CCFDAC'23.</li>
+   <li> May 2023, Invited to served as Publication Chair of <A HREF="https://conf.ccf.org.cn/ccfdac23">CCFDAC'23</a>.</li>
    <li> Mar. 2023, Invited to served as Editorial Board Member of <A
        HREF="https://jeit.ac.cn/news/About%20Journal.htm">JEIT</a>.</li>
    <li> Mar. 2023, Invited to served as TPC Chair of <A
@@ -140,6 +140,16 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h3> 2023 </h3>
    <p class="big">
+   <li>Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A
+  HREF="https://jcst.ict.ac.cn/EN/10.1007/s11390-022-1981-4">A
+     Semi-Tensor Product Based All Solutions Boolean Satisfiability Solver</a>",<i>Journal of Computer Science and
+    Technology (<strong>JCST</strong>)</i>, 38(3):702-713, May 2023. </li>
+   <li>
+     Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A
+       HREF="https://ieeexplore.ieee.org/document/10137287">Exact Synthesis based on Semi-Tensor Product
+                         Circuit Solver</a>", <strong> DATE' 23</strong>, <i>2023 Design, Automation
+       and Test in Europe Conference</i>, Antwerp, Belgium, Apr. 2023. 
+   </li>
 <li> Hongyang Pan, Ruibing Zhang, Yinshui Xia, Lunyao Wang, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Semi-Tensor Product based Circuit Simulation for SAT sweeping
    ", <strong>IWLS' 23</strong>, <i> International Workshop on Logic & Synthesis</i>, June
    2023, Lausanne, Switzerland.</li>
@@ -177,15 +187,6 @@ Zhang, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
   on Very Large Scale Integration Systems (<strong>TVLSI</strong>)</i>, Dec.
 2022, 30(12):1827-1839.
      </li>
-   <li>Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A
-  HREF="https://jcst.ict.ac.cn/EN/10.1007/s11390-022-1981-4">A
-     Semi-Tensor Product Based All Solutions Boolean Satisfiability Solver</a>",<i>Journal of Computer Science and
-    Technology (<strong>JCST</strong>)</i>, Accepted for publication, 2022. </li>
-   <li>
-     Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Exact Synthesis based on Semi-Tensor Product
-     Circuit Solver", <strong> DATE' 23</strong>, <i>2023 Design, Automation
-       and Test in Europe Conference</i>, Antwerp, Belgium, Accepted for publication, 2022. 
-   </li>
    <li>
      朱柏成，<A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，王伦耀，夏银水，基于XMG的乘法器电路等价性验证算法，<i>计算机辅助设计与图形学学报</i>，2022，录用待发表.
      </li>
