--- a/index.html
+++ b/index.html
@@ -140,6 +140,16 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h3> 2023 </h3>
    <p class="big">
+	   <li>Zhengyuan Shi, Hongyang Pan, Sadaf Khan, Min Li, Yi Liu, Junhua
+       Huang, Hui-Ling Zhen, Mingxuan Yuan, <A
+                                                HREF="https://zfchu.github.io/">Zhufei
+                                                Chu</a>, Qiang Xu，"DeepGate2:
+                                            Functionality-Aware Circuit
+                                            Representation
+                                          Learning"，<strong>ICCAD'23</strong>,
+                                                2023 International Conference
+                                                on Computer-Aided Design, San
+                                                Francisco, CA, USA, Nov. 2023.</li>
    <li>Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A
   HREF="https://jcst.ict.ac.cn/EN/10.1007/s11390-022-1981-4">A
      Semi-Tensor Product Based All Solutions Boolean Satisfiability Solver</a>",<i>Journal of Computer Science and
