--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@ Design Automation is accepted for presentation at <A
 
 <UL>
 	 <p class="big">
+   <li> July 2023, Chengyu as the first author won the Honorable Paper Award
+     at <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a>.</li>
    <li> May 2023, Invited to served as Publication Chair of <A HREF="https://conf.ccf.org.cn/ccfdac23">CCFDAC'23</a>.</li>
    <li> Mar. 2023, Invited to served as Editorial Board Member of <A
        HREF="https://jeit.ac.cn/news/About%20Journal.htm">JEIT</a>.</li>
@@ -176,7 +178,11 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
    <li> Chunliu Liao, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Improved Depth-Aware Circuit Partitioning for Mixed Logic Synthesis
 ", <strong>ISEDA' 23</strong>, <i> IEEE International Symposium of EDA</i>, May
 2023, Nanjing, China.</li>
-	<li> Chengyu Ma, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "An Integrated Logic Function Decomposition Flow for XOR-Majority Graphs", <strong>ISEDA' 23</strong>, <i> IEEE International Symposium of EDA</i>, May 2023, Nanjing, China.</li>
+	<li> Chengyu Ma, Yong Xiao, Yun Shao, and <A
+      HREF="https://zfchu.github.io/">Zhufei Chu</a>, "An Integrated Logic
+    Function Decomposition Flow for XOR-Majority Graphs", <strong>ISEDA'
+      23</strong>, <i> IEEE International Symposium of EDA</i>, May 2023,
+    Nanjing, China. (<strong>Honorable Paper Award</strong>)</li>
 	<li>
     <A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，"<A
        HREF="https://jeit.ac.cn/cn/article/doi/10.11999/JEIT220391">基于布尔可满足性的精确逻辑综合综述</a>"，<i>电子与信息学报</i>，2023,
