--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
 <title>Zhufei Chu</title>
 </head>
 
+<head>
+  <style>
+    @keyframes flashing {
+      0% { opacity: 0; }
+      50% { opacity: 1; }
+      100% { opacity: 0; }
+    }
+
+    .red-star {
+      display: inline-block;
+      color: red;
+      font-size: 14px;
+      animation: flashing 1.5s infinite;
+    }
+  </style>
+</head>
+
 <!body background="images/background.jpg" BGCOLOR="#8C7853">
 <body>
 
@@ -50,7 +67,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 </h2>
 <strong>ALSO</strong>: <strong>A</strong>dcanced  <strong>L</strong>ogic
 <strong>S</strong>ynthesis and <strong>O</strong>ptimization tool. <A HREF="https://github.com/nbulsi/also">[GitHub]</a>
-<A HREF="https://gitee.com/zfchu/also">[Gitee]</a>
+<A HREF="https://gitee.com/zfchu/also">[Gitee]</a>. <span class="red-star">&#9733;</span> 
 
 <h2> <a name="tutorials">Tutorials</a> 
 </h2>
@@ -182,7 +199,7 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
       HREF="https://zfchu.github.io/">Zhufei Chu</a>, "An Integrated Logic
     Function Decomposition Flow for XOR-Majority Graphs", <strong>ISEDA'
       23</strong>, <i> IEEE International Symposium of EDA</i>, May 2023,
-    Nanjing, China. (<strong>Honorable Paper Award</strong>)</li>
+    Nanjing, China. (<strong>Honorable Paper Award</strong>) <span class="red-star">&#9733;</span> </li>
 	<li>
     <A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，"<A
        HREF="https://jeit.ac.cn/cn/article/doi/10.11999/JEIT220391">基于布尔可满足性的精确逻辑综合综述</a>"，<i>电子与信息学报</i>，2023,
@@ -245,7 +262,7 @@ Qing Wan, Changjin Wan, Huaqiang Wu, Yuchao Yang, Xiaohe Huang, Peng Zhou, Lin C
     Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei
       Chu</a>, "A Semi-Tensor Product Based SAT All Solutions Solver",
     <strong>CCFDAC'21</strong>, CCF Integrated
-    Circuit Design and Automation Conference, Oct. 2021, Wuhan, China. (<strong>Best Paper Award</strong>)
+    Circuit Design and Automation Conference, Oct. 2021, Wuhan, China. (<strong>Best Paper Award</strong>)  <span class="red-star">&#9733;</span> 
     </li>
 <li>Hui-Ming Tian and <A HREF="https://zfchu.github.io">Zhu-Fei
     Chu</a>, "<A HREF="http://jcst.ict.ac.cn/EN/10.1007/s11390-021-0898-7">Inversion Optimization Strategy based on Primitives
