--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ Design Automation is accepted for presentation at <A
 
 <UL>
 	 <p class="big">
+		 <li>Aug. 2023, Invited to served as Competition Committee Member of <A HREF="https://eda.icisc.cn/activity/toTpcType">EDA Elite Challenge</a>.</li>
    <li> July 2023, Chengyu as the first author won the Honorable Paper Award
      at <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a>.</li>
    <li> May 2023, Invited to served as Publication Chair of <A HREF="https://conf.ccf.org.cn/ccfdac23">CCFDAC'23</a>.</li>
@@ -192,22 +193,22 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 	   <li> 张健、蔡少伟、陈振邦、贺飞、李占山、马菲菲、吴志林、钟卓炜、<A HREF="https://zfchu.github.io/">储著飞</a>，"<A
 	       HREF="https://dl.ccf.org.cn/article/detail.html?_ack=1&id=6476813273516032">约束求解技术与应用</a>"，<i>2021-2022中国计算机科学技术发展报告(电子版)</i>, 2023年5月, pp. 1-47. </li>
    
-   <li> Chunliu Liao, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Improved Depth-Aware Circuit Partitioning for Mixed Logic Synthesis
+   <li> Chunliu Liao, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A HREF="https://ieeexplore.ieee.org/document/10218548">Improved Depth-Aware Circuit Partitioning for Mixed Logic Synthesis</a>
 ", <strong>ISEDA' 23</strong>, <i> IEEE International Symposium of EDA</i>, May
-2023, Nanjing, China.</li>
+2023, pp.170-173, Nanjing, China.</li>
 	<li> Chengyu Ma, Yong Xiao, Yun Shao, and <A
-      HREF="https://zfchu.github.io/">Zhufei Chu</a>, "An Integrated Logic
-    Function Decomposition Flow for XOR-Majority Graphs", <strong>ISEDA'
-      23</strong>, <i> IEEE International Symposium of EDA</i>, May 2023,
+      HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A HREF="https://ieeexplore.ieee.org/document/10218518">An Integrated Logic
+    Function Decomposition Flow for XOR-Majority Graphs</a>", <strong>ISEDA'
+      23</strong>, <i> IEEE International Symposium of EDA</i>, May 2023, pp. 146-149,
     Nanjing, China. (<strong>Honorable Paper Award</strong>) <span class="red-star">&#9733;</span> </li>
 	<li>
     <A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，"<A
        HREF="https://jeit.ac.cn/cn/article/doi/10.11999/JEIT220391">基于布尔可满足性的精确逻辑综合综述</a>"，<i>电子与信息学报</i>，2023,
     45(1):14-23. (<strong>Invited</strong>)
 </li>
-   <li> Ruibing Zhang, Hongyang Pan, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Logic Circuit Simulation based on Semi-Tensor Product", <strong>CSTIC' 23</strong>, <i> China Semiconductor Technology International Conference</i>, June
+   <li> Ruibing Zhang, Hongyang Pan, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A HREF="https://ieeexplore.ieee.org/document/10219157">Logic Circuit Simulation based on Semi-Tensor Product</a>", <strong>CSTIC' 23</strong>, <i> China Semiconductor Technology International Conference</i>, June
 2023, Shanghai, China.</li>
-   <li> Kunmei Hu and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "CirSAT: An Efficient Circuit-based SAT Solver via Fanout-driven Decision Heuristic", <strong>CSTIC' 23</strong>, <i> China Semiconductor Technology International Conference</i>, June
+   <li> Kunmei Hu and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A HREF="https://ieeexplore.ieee.org/document/10219398">CirSAT: An Efficient Circuit-based SAT Solver via Fanout-driven Decision Heuristic</a>", <strong>CSTIC' 23</strong>, <i> China Semiconductor Technology International Conference</i>, June
 2023, Shanghai, China.</li>
 
   <h3> 2022 </h3>
