remove white space

--- a/index.html
+++ b/index.html
@@ -501,24 +501,25 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <a href="http://ieeexplore.ieee.org/Xplore/dynhome.jsp">Xplore</a>
 </li>
 </ul>
-
-<table border=0 cellspacing=5>
-<td width=500>
-<h2><a name="address">Address</a></h2>	
-Yuxiu Road 505, Zhenhai, Ningbo, 315211<br>
-Faculty of Electrical Engineering and Computer Science (EECS)<br>
-Ningbo Univeristy, Zhejiang, China
-</td>
-
-<td>
-	<td width = 500>
-</td>
-
-<td>
-	<td width = 350>
-		<img src="images/yangym.jpg" width=320>
-</td>
-
+<table border="0" cellspacing="5">
+  <tbody>
+    <tr>
+      <td width="500">
+        <h2>
+          <a name="address">Address</a>
+        </h2> 
+        Yuxiu Road 505, Zhenhai, Ningbo, 315211<br>
+        Faculty of Electrical Engineering and Computer Science (EECS)<br>
+        Ningbo Univeristy, Zhejiang, China</td>
+      <td></td>
+      <td width="500"></td>
+      <td></td>
+      <td width="350">
+        <img src="images/yangym.jpg" width="320">
+      </td>
+    </tr>
+  </tbody>
+</table>
 
 </BODY>
 </HTML>
