--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 [<a href="#tutorials">Tutorials</a>]
 [<a href="#news">Recent News</a>]
 [<a href="#about">About me</a>]
+[<a href="#books">Books</a>]
 [<a href="#publications">Publications</a>]
 [<a href="#services">Professional Services</a>]
 [<a href="#links">Links</a>]
@@ -88,7 +89,14 @@ Design Automation is accepted for presentation at <A
 
 <UL>
 	 <p class="big">
-		 <li>Aug. 2023, Invited to served as Competition Committee Member of <A HREF="https://eda.icisc.cn/activity/toTpcType">EDA Elite Challenge</a>.</li>
+   <li>Oct. 2023, Invited to served as Research TPC Subcommittee Member of <A
+       HREF="https://www.dac.com/">
+       DAC'24</a>.</li>
+   <li>Oct. 2023, Invited to served as Digital Design & Verification Track
+     Chair of <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a>.</li>
+   <li>Oct. 2023, Invited to served as TPC member and invited speaker of
+     <A HREF=https://www.semiconchina.org/en/5>CSTIC'24</a>.</li>
+   <li>Aug. 2023, Invited to served as Competition Committee Member of <A HREF="https://eda.icisc.cn/activity/toTpcType">EDA Elite Challenge</a>.</li>
    <li> July 2023, Chengyu as the first author won the Honorable Paper Award
      at <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a>.</li>
    <li> May 2023, Invited to served as Publication Chair of <A HREF="https://conf.ccf.org.cn/ccfdac23">CCFDAC'23</a>.</li>
@@ -149,7 +157,13 @@ Design Automation is accepted for presentation at <A
     He is currently a full professor at Ningbo University, Ningbo. His current research interests include many aspects of logic synthesis and its applications.
 </UL>	
 <HR>
-	
+
+<h2> <a name="books">Books</a> </h2>
+Kaihui Tu, Xifan Tang, Cunxi Yu, Lana Josipovic, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
+<strong><A
+    HREF="https://www.amazon.co.jp/FPGA-EDA-Design-Principles-Implementation/dp/9819977541">FPGA
+    EDA : Design Principles and Implementation (1st ed. 2024) </strong></a>.
+      
 <h2> <a name="publications">Publications <a href="https://scholar.google.com/citations?hl=en&user=0spez40AAAAJ&view_op=list_works&gmla=AJsN-F7L0_K-NorY6eoZe8Pw5s7fVCiAq78gP2ooH9ToyokXmHtZMdOpLqZcA1SdxYMErXBK7c3ojrJANocYOruEoCCtFhL_X66ox6BQu7pD55qOLBSKisIgW6UyODbwLeEAWXk-sFtfYo8WCNcAkyazMLZ_JKn6yQ"> [Google Scholar]</a> <a href="http://dblp.uni-trier.de/pers/hd/c/Chu:Zhufei"> [DBLP] 
 <a href="https://orcid.org/0000-0001-5718-4822" target="orcid.widget" rel="noopener noreferrer"
   style="vertical-align:top;"><img
@@ -160,14 +174,13 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h3> 2023 </h3>
    <p class="big">
+   <li>Kunmei Hu and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
+"An Efficient Circuit-based SAT Solver and Its Application in Logic Equivalence Checking", <i>Microelectronics Journal</i>, Accepted for publication, 2023. </li>
 	   <li>Zhengyuan Shi, Hongyang Pan, Sadaf Khan, Min Li, Yi Liu, Junhua
        Huang, Hui-Ling Zhen, Mingxuan Yuan, <A
          HREF="https://zfchu.github.io/">Zhufei Chu</a>, Qiang Xu，"DeepGate2:
-                                            Functionality-Aware Circuit
-                                            Representation
-                                          Learning"，<strong>ICCAD'23</strong>,
-                                                2023 International Conference
-                                                on Computer-Aided Design, San
+       Functionality-Aware Circuit Representation
+       Learning"，<strong>ICCAD'23</strong>, 2023 International Conference on Computer-Aided Design, San
                                                 Francisco, CA, USA, Nov. 2023.</li>
    <li>Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A
   HREF="https://jcst.ict.ac.cn/EN/10.1007/s11390-022-1981-4">A
@@ -469,18 +482,20 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
 <ul> 
   <p class="big">
   <li>Proceedings Chair, TPC member, and Session Chair  for the International Workshop on Logic and Synthesis, 2019-2021.</li>
-   <li>Finance Chair, TPC member, and Session Chair  for the International Workshop on Logic and Synthesis, 2022.</li>
+   <li>Finance Chair, TPC member, and Session Chair  for the International
+     Workshop on Logic and Synthesis, 2022-2023.</li>
    <li>Digital Design & Verification Track Chair of the IEEE International Symposium of EDA (ISEDA 2023).</li>
    <li>TPC Chair for the International Conference on Circuits and Systems
      (ICCS), 2023.</li>
    <li>Editorial Board Member for the Journal of Electronics and Enformation Technology (JEIT), 2023-2026 </li>
-  <li>TPC member for the Design Automation Conference, 2023.</li>
+  <li>TPC member for the Design Automation Conference, 2023-2024.</li>
   <li>TPC member for the International Conference on VLSI Design, 2020-2022. </li>
   <li>TPC member for the China Semiconductor Technology International Conference (Symposium IX), 2021-2022. </li>
   <li>TPC member for the IFIP/IEEE International Conference on Very Large Scale Integration (PhD Forum), 2020. </li>
   <li>TPC member for the IEEE International Conference on Computer Design (Special Sessions), 2020. </li>
   <li>TPC member for the IEEE International Conference on Omni-layer Intelligent systems, 2019-2020. </li>
-  <li>TPC member and Session Chair for the CCF Integrated Circuit Design and Automation Conference, 2020-2021. </li>
+  <li>TPC member and Session Chair for the CCF Integrated Circuit Design and
+    Automation Conference, 2020-2023. </li>
   <li>Reviewer for the journal IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems. </li>
   <li>Reviewer for the journal IEEE Transactions on Very Large Scale Integration (VLSI) Systems. </li>
   <li>Reviewer for the journal IEEE Transactions on Emerging Topics in Computing. </li>
