--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Design Automation is accepted for presentation at <A
 Kaihui Tu, Xifan Tang, Cunxi Yu, Lana Josipovic, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
 <strong><A
     HREF="https://www.amazon.co.jp/FPGA-EDA-Design-Principles-Implementation/dp/9819977541">FPGA
-    EDA : Design Principles and Implementation (1st ed. 2024) </strong></a>.
+    EDA : Design Principles and Implementation</strong></a> (1st ed. 2024).
       
 <h2> <a name="publications">Publications <a href="https://scholar.google.com/citations?hl=en&user=0spez40AAAAJ&view_op=list_works&gmla=AJsN-F7L0_K-NorY6eoZe8Pw5s7fVCiAq78gP2ooH9ToyokXmHtZMdOpLqZcA1SdxYMErXBK7c3ojrJANocYOruEoCCtFhL_X66ox6BQu7pD55qOLBSKisIgW6UyODbwLeEAWXk-sFtfYo8WCNcAkyazMLZ_JKn6yQ"> [Google Scholar]</a> <a href="http://dblp.uni-trier.de/pers/hd/c/Chu:Zhufei"> [DBLP] 
 <a href="https://orcid.org/0000-0001-5718-4822" target="orcid.widget" rel="noopener noreferrer"
@@ -172,7 +172,16 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
     </a></a> </h2>
 <p>
 <OL>
-  <h3> 2023 </h3>
+  <h4> 2024 </h3>
+   <p class="big">
+   <li>
+     Hongyang Pan, Ruibing Zhang, Yinshui Xia, Lunyao Wang, Fan Yang, Xuan
+     Zeng, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
+     "A Semi-Tensor Product based Circuit Simulation for SAT-sweeping", <strong> DATE' 24</strong>, <i>2024 Design, Automation
+       and Test in Europe Conference</i>, Valencia, Spain, Mar. 2024. 
+   </li>
+
+   <h3> 2023 </h3>
    <p class="big">
    <li>Kunmei Hu and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
 "An Efficient Circuit-based SAT Solver and Its Application in Logic Equivalence Checking", <i>Microelectronics Journal</i>, Accepted for publication, 2023. </li>
