--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@ Design Automation is accepted for presentation at <A
        DAC'24</a>.</li>
    <li>Oct. 2023, Invited to served as Digital Design & Verification Track
      Chair of <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a>.</li>
-   <li>Oct. 2023, Invited to served as TPC member and invited speaker of
+   <li>Oct. 2023, Invited to served as <A
+                                           HREF=https://www.semiconchina.org/en/7>TPC member</a> and <A
+       HREF=https://www.semiconchina.org/en/1244>invited speaker</a> of
      <A HREF=https://www.semiconchina.org/en/5>CSTIC'24</a>.</li>
    <li>Aug. 2023, Invited to served as Competition Committee Member of <A HREF="https://eda.icisc.cn/activity/toTpcType">EDA Elite Challenge</a>.</li>
    <li> July 2023, Chengyu as the first author won the Honorable Paper Award
@@ -184,7 +186,9 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
    <h3> 2023 </h3>
    <p class="big">
    <li>Kunmei Hu and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
-"An Efficient Circuit-based SAT Solver and Its Application in Logic Equivalence Checking", <i>Microelectronics Journal</i>, Accepted for publication, 2023. </li>
+     "<A HREF=https://www.sciencedirect.com/science/article/pii/S002626922300318X>An
+       Efficient Circuit-based SAT Solver and Its Application in Logic
+       Equivalence Checking</a>", <i>Microelectronics Journal</i>, Vol 142, 106005, Dec. 2023. </li>
 	   <li>Zhengyuan Shi, Hongyang Pan, Sadaf Khan, Min Li, Yi Liu, Junhua
        Huang, Hui-Ling Zhen, Mingxuan Yuan, <A
          HREF="https://zfchu.github.io/">Zhufei Chu</a>, Qiang Xu，"DeepGate2:
