--- a/index.html
+++ b/index.html
@@ -177,6 +177,11 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
   <h4> 2024 </h3>
    <p class="big">
    <li>
+     Hongyang Pan, Yinshui Xia, Lunyao Wang, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
+     "Semi-Tensor Product Based Exact Synthesis for Logic Rewriting", <i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems
+     </i>, <strong>TCAD</strong>, accepted for publication.
+     </li>
+   <li>
      Hongyang Pan, Ruibing Zhang, Yinshui Xia, Lunyao Wang, Fan Yang, Xuan
      Zeng, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
      "A Semi-Tensor Product based Circuit Simulation for SAT-sweeping", <strong> DATE' 24</strong>, <i>2024 Design, Automation
