--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
    <li>
      Hongyang Pan, Yinshui Xia, Lunyao Wang, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
      "Semi-Tensor Product Based Exact Synthesis for Logic Rewriting", <i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems
-     </i>, <strong>TCAD</strong>, accepted for publication.
+     </i>, <strong>TCAD</strong>, DOI:10.1109/TCAD.2023.3337279, accepted for publication.
      </li>
    <li>
      Hongyang Pan, Ruibing Zhang, Yinshui Xia, Lunyao Wang, Fan Yang, Xuan
