--- a/index.html
+++ b/index.html
@@ -178,8 +178,9 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
    <p class="big">
    <li>
      Hongyang Pan, Yinshui Xia, Lunyao Wang, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
-     "Semi-Tensor Product Based Exact Synthesis for Logic Rewriting", <i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems
-     </i>, <strong>TCAD</strong>, DOI:10.1109/TCAD.2023.3337279, accepted for publication.
+     "<A HREF="https://ieeexplore.ieee.org/document/10330666">Semi-Tensor
+       Product Based Exact Synthesis for Logic Rewriting</a>", <i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems
+     </i>, <strong>TCAD</strong>, DOI:10.1109/TCAD.2023.3337279, Early access.
      </li>
    <li>
      Hongyang Pan, Ruibing Zhang, Yinshui Xia, Lunyao Wang, Fan Yang, Xuan
