--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h4> 2024 </h3>
    <p class="big">
+   <li> Tiancheng Li, Erping Li, Huali Duan, <A
+       HREF="https://zfchu.github.io">Zhufei Chu</a>, Jian Wang, Wenchao Chen,
+     "Artificial neural network models for
+     metal-ferroelectric-insulator-semiconductor ferroelectric tunnel junction memristor",
+     <i>Microelectronics Journal</i>, Vol 144, 106083, Feb. 2024.</li>
    <li>
      Hongyang Pan, Yinshui Xia, Lunyao Wang, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
      "<A HREF="https://ieeexplore.ieee.org/document/10330666">Semi-Tensor
