--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Design Automation is accepted for presentation at <A
 <h2> <a name="books">Books</a> </h2>
 Kaihui Tu, Xifan Tang, Cunxi Yu, Lana Josipovic, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
 <strong><A
-    HREF="https://www.amazon.co.jp/FPGA-EDA-Design-Principles-Implementation/dp/9819977541">FPGA
+    HREF="https://link.springer.com/book/10.1007/978-981-99-7755-0">FPGA
     EDA : Design Principles and Implementation</strong></a> (1st ed. 2024).
       
 <h2> <a name="publications">Publications <a href="https://scholar.google.com/citations?hl=en&user=0spez40AAAAJ&view_op=list_works&gmla=AJsN-F7L0_K-NorY6eoZe8Pw5s7fVCiAq78gP2ooH9ToyokXmHtZMdOpLqZcA1SdxYMErXBK7c3ojrJANocYOruEoCCtFhL_X66ox6BQu7pD55qOLBSKisIgW6UyODbwLeEAWXk-sFtfYo8WCNcAkyazMLZ_JKn6yQ"> [Google Scholar]</a> <a href="http://dblp.uni-trier.de/pers/hd/c/Chu:Zhufei"> [DBLP] 
