ISEDA and many others

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@ Design Automation is accepted for presentation at <A
 
 <UL>
 	 <p class="big">
+   <li>Mar. 2024, Invited to served as TPC Member of <A
+       HREF="https://std.samr.gov.cn/search/orgDetailView?data_id=EE1BA472BFC52880E05397BE0A0A248E">
+       National Standardization TC 599/ WG1</a>.</li>
    <li>Oct. 2023, Invited to served as Research TPC Subcommittee Member of <A
        HREF="https://www.dac.com/">
        DAC'24</a>.</li>
@@ -164,7 +167,7 @@ Design Automation is accepted for presentation at <A
 Kaihui Tu, Xifan Tang, Cunxi Yu, Lana Josipovic, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
 <strong><A
     HREF="https://link.springer.com/book/10.1007/978-981-99-7755-0">FPGA
-    EDA : Design Principles and Implementation</strong></a> (1st ed. 2024).
+    EDA : Design Principles and Implementation</strong></a>, Springer, Jan. 2024.
       
 <h2> <a name="publications">Publications <a href="https://scholar.google.com/citations?hl=en&user=0spez40AAAAJ&view_op=list_works&gmla=AJsN-F7L0_K-NorY6eoZe8Pw5s7fVCiAq78gP2ooH9ToyokXmHtZMdOpLqZcA1SdxYMErXBK7c3ojrJANocYOruEoCCtFhL_X66ox6BQu7pD55qOLBSKisIgW6UyODbwLeEAWXk-sFtfYo8WCNcAkyazMLZ_JKn6yQ"> [Google Scholar]</a> <a href="http://dblp.uni-trier.de/pers/hd/c/Chu:Zhufei"> [DBLP] 
 <a href="https://orcid.org/0000-0001-5718-4822" target="orcid.widget" rel="noopener noreferrer"
@@ -176,16 +179,49 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h4> 2024 </h3>
    <p class="big">
+   <li>
+Lei Chen, Yiqi Chen, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Wenji Fang, Tsung-Yi Ho, Yu Huang, Sadaf Khan, Min Li, Xingquan Li, 
+Yun Liang, Yibo Lin, Jinwei Liu, Yi Liu, Guojie Luo, Zhengyuan Shi, Guangyu Sun, Dimitrios Tsaras, Runsheng Wang, Ziyi Wang, Xinming Wei, Zhiyao Xie, Qiang Xu, Chenhao Xue, 
+Evangeline F.Y. Young, Bei Yu, Mingxuan Yuan, Haoyi Zhang, Zuodong Zhang, Yuxiang Zhao, Hui-Ling Zhen, Ziyang Zheng, Binwu Zhu, Keren Zhu, and Sunan Zou, 
+"<A HREF="https://arxiv.org/abs/2403.07257">The Dawn of AI-Native EDA: Promises and Challenges of Large
+  Circuit Models</a>", arXiv preprint arXiv:2403.07257, Mar. 2024.
+   </li>
+      <li> Ming Yan, Guanghai Dong, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
+   Exact Synthesis and Inversion Optimization for RM3 based Logic-in-Memory", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May
+   2024, Xi'an, China, accepted for publication.</li>
+
+      <li> Zhang Hu, Chengyu Ma, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
+   A Novel Structural Choices Generation Method for Logic Restructuring", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May
+   2024, Xi'an, China, accepted for publication.</li>
+
+      <li> Jun Zhu, Hongyang Pan, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
+   Multiplication Complexity Optimization based on Quantified Boolean Formulas", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May
+   2024, Xi'an, China, accepted for publication.</li>
+
+      <li> Yuting Cai, Yue Wu, Xiaoyan Yang, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
+   A Logic Optimization Method Using Reinforcement Learning", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May
+   2024, Xi'an, China, accepted for publication.</li>
+  <li>
+    <A HREF="https://zfchu.github.io/">储著飞</a>, 马铖昱, 闫鸣, 潘家祥,
+       潘鸿洋, 王伦耀, 夏银水，"<A
+       HREF="https://jeit.ac.cn/cn/article/doi/10.11999/JEIT231457">基于半张量积的逻辑综合研究进展</a>"，<i>电子与信息学报</i>，2024,
+     在线发表.
+</li>
+<li>
+Huali Duan, Erping Li, Qinyi Huang, Da Li, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Jian Wang, and Wenchao Chen, 
+"<A HREF="https://pubs.aip.org/aip/jap/article/135/10/104502/3270993">Investigation of thermal stress effects on subthreshold conduction in nanoscale p-FinFET from Multiphysics perspective</a>". 
+<i>Journal of Applied Physics</i>, Mar. 2024, 135(10).
+</li>
    <li> Tiancheng Li, Erping Li, Huali Duan, <A
        HREF="https://zfchu.github.io">Zhufei Chu</a>, Jian Wang, Wenchao Chen,
      "Artificial neural network models for
      metal-ferroelectric-insulator-semiconductor ferroelectric tunnel junction memristor",
-     <i>Microelectronics Journal</i>, Vol 144, 106083, Feb. 2024.</li>
+     <i>Microelectronics Journal</i>, Feb. 2024, Vol 144, 106083.</li>
    <li>
      Hongyang Pan, Yinshui Xia, Lunyao Wang, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
      "<A HREF="https://ieeexplore.ieee.org/document/10330666">Semi-Tensor
        Product Based Exact Synthesis for Logic Rewriting</a>", <i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems
-     </i>, <strong>TCAD</strong>, DOI:10.1109/TCAD.2023.3337279, Early access.
+     </i>, <strong>TCAD</strong>, Apr. 2024, 43(4):1093-1106.
      </li>
    <li>
      Hongyang Pan, Ruibing Zhang, Yinshui Xia, Lunyao Wang, Fan Yang, Xuan
