--- a/index.html
+++ b/index.html
@@ -179,6 +179,11 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h4> 2024 </h3>
    <p class="big">
+   <li>Qiyu Yang, Zheng-Dong Luo, Fei Xiao, Junpeng Zhang, Dawei Zhang,
+     Dongxin Tan, Xuetao Gan, Yan Liu, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, and Genquan Han,  
+     "Solid-state nonvolatile memories based on vdW heterostructure-based vertical-transport ferroelectric field-effect transistors", 
+     <i>Science China Information Sciences</i>, 2024, Accepted for publication.
+     </li>
    <li>
 Lei Chen, Yiqi Chen, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Wenji Fang, Tsung-Yi Ho, Yu Huang, Sadaf Khan, Min Li, Xingquan Li, 
 Yun Liang, Yibo Lin, Jinwei Liu, Yi Liu, Guojie Luo, Zhengyuan Shi, Guangyu Sun, Dimitrios Tsaras, Runsheng Wang, Ziyi Wang, Xinming Wei, Zhiyao Xie, Qiang Xu, Chenhao Xue, 
@@ -213,7 +218,7 @@ Huali Duan, Erping Li, Qinyi Huang, Da Li, <A HREF="https://zfchu.github.io/">Zh
 <i>Journal of Applied Physics</i>, Mar. 2024, 135(10).
 </li>
    <li> Tiancheng Li, Erping Li, Huali Duan, <A
-       HREF="https://zfchu.github.io">Zhufei Chu</a>, Jian Wang, Wenchao Chen,
+       HREF="https://zfchu.github.io">Zhufei Chu</a>, Jian Wang, and Wenchao Chen,
      "Artificial neural network models for
      metal-ferroelectric-insulator-semiconductor ferroelectric tunnel junction memristor",
      <i>Microelectronics Journal</i>, Feb. 2024, Vol 144, 106083.</li>
